<resources>
    <string name="app_name">News App</string>
    <string name="offline_message">You\'re Offline</string>
    <string name="welcome_message">Welcome to News App</string>
    <string name="welcome_headline">Locate articles and breaking news headlines from news sources and blogs across the web</string>
    <string name="follow_country_title">Follow a Country</string>
    <string name="follow_country_message">Please select a country from list.</string>
    <string name="subscribe_title">Subscribe To Categories</string>
    <string name="subscribe_message">Subscribe to 3 of your favorite categories.\nTo Follow it\s news.</string>
    <string name="settings_title">Edit App Settings</string>
    <string name="all_set_message">All set, you\'re ready</string>
    <string name="select_language_title">Select Language - إختر لغه</string>
    <string name="start_button_title">Let\'s start</string>
    <string name="arabic_title">عربي</string>
    <string name="english_title">English</string>
    <string name="selected_country_title">Selected Country:</string>
    <string name="next_title">Next</string>
    <string name="finish_title">Finish</string>
    <string name="not_found">Not Found</string>
    <string name="edit_categories_title">Edit Categories</string>
    <string name="edit_country_title">Edit Followed country</string>
    <string name="change_language_title">Change App Language</string>
    <string name="categories_error_message">Please select at least 3 categories</string>
</resources>