<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground">

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/welcome_message"
        android:textAlignment="viewStart"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_iv"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/headline_message_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorControlNormal"
        android:text="@string/welcome_headline"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message_tv" />

    <ImageView
        android:id="@+id/language_label"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_language"
        android:layout_margin="16dp"
        app:tint="?attr/colorOnSurface"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language_title"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/language_label"
        app:layout_constraintStart_toEndOf="@+id/language_label"
        app:layout_constraintTop_toTopOf="@+id/language_label" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/arabic_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/arabic_title"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSurface"
            app:cornerRadius="8dp"
            android:layout_marginBottom="16dp"
            app:strokeColor="?attr/colorSecondary"
            app:strokeWidth="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/english_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/english_title"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSurface"
            app:cornerRadius="8dp"
            app:strokeColor="?attr/colorSecondary"
            app:strokeWidth="0dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="?attr/colorSecondary"
        android:elevation="8dp"
        android:minHeight="56dp"
        android:text="@string/start_button_title"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>