<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/follow_country_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/follow_country_title"
        app:layout_constraintVertical_bias="0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/follow_country_message_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/follow_country_message"
        app:layout_constraintEnd_toEndOf="@+id/follow_country_title_tv"
        app:layout_constraintStart_toStartOf="@+id/follow_country_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/follow_country_title_tv" />

    <TextView
        android:id="@+id/selected_country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/selected_country_title"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="@+id/follow_country_message_tv"
        app:layout_constraintTop_toBottomOf="@+id/follow_country_message_tv" />

    <TextView
        android:id="@+id/selected_country_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        tools:text="Egypt"
        app:layout_constraintBottom_toBottomOf="@+id/selected_country_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selected_country_title"
        app:layout_constraintTop_toTopOf="@+id/selected_country_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/countries_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_country_title"
        tools:listitem="@layout/country_list_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="?attr/colorSecondary"
        android:elevation="8dp"
        android:minHeight="56dp"
        android:text="@string/next_title"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>