<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorOnBackground">


    <TextView
        android:id="@+id/subscribe_category_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subscribe_title"
        app:layout_constraintVertical_bias="0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subscribe_category_message_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subscribe_message"
        app:layout_constraintEnd_toEndOf="@+id/subscribe_category_title_tv"
        app:layout_constraintStart_toStartOf="@+id/subscribe_category_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/subscribe_category_title_tv" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/categories_chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/finish_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscribe_category_message_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="?attr/colorSecondary"
        android:elevation="8dp"
        android:minHeight="56dp"
        android:text="@string/finish_title"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>